nodejs/versioned_docs/version-1.14/test-assertions.mdx
---
id: test-assertions
title: "Assertions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright Test uses [expect](https://jestjs.io/docs/expect) library for test assertions. This library provides a lot of matchers like `toEqual`, `toContain`, `toMatch`, `toMatchSnapshot` and many more:

```js
expect(success).toBeTruthy();
```

Playwright also extends it with convenience async matchers that will wait until the expected condition is met.

- [Matching](#matching)
- [expect(locator).toBeChecked](#expectlocatortobechecked)
- [expect(locator).toBeDisabled](#expectlocatortobedisabled)
- [expect(locator).toBeEditable](#expectlocatortobeeditable)
- [expect(locator).toBeEmpty](#expectlocatortobeempty)
- [expect(locator).toBeEnabled](#expectlocatortobeenabled)
- [expect(locator).toBeFocused](#expectlocatortobefocused)
- [expect(locator).toBeHidden](#expectlocatortobehidden)
- [expect(locator).toBeVisible](#expectlocatortobevisible)
- [expect(locator).toContainText(text, options?)](#expectlocatortocontaintexttext-options)
- [expect(locator).toHaveAttribute(name, value)](#expectlocatortohaveattributename-value)
- [expect(locator).toHaveClass(expected)](#expectlocatortohaveclassexpected)
- [expect(locator).toHaveCount(count)](#expectlocatortohavecountcount)
- [expect(locator).toHaveCSS(name, value)](#expectlocatortohavecssname-value)
- [expect(locator).toHaveId(id)](#expectlocatortohaveidid)
- [expect(locator).toHaveJSProperty(name, value)](#expectlocatortohavejspropertyname-value)
- [expect(locator).toHaveText(expected, options)](#expectlocatortohavetextexpected-options)
- [expect(page).toHaveTitle(title)](#expectpagetohavetitletitle)
- [expect(page).toHaveURL(url)](#expectpagetohaveurlurl)
- [expect(locator).toHaveValue(value)](#expectlocatortohavevaluevalue)

## Matching

Consider the following example:

```js
await expect(page.locator('.status')).toHaveText('Submitted');
```

Playwright Test will be re-testing the node with the selector `.status` until fetched Node has the `"Submitted"` text. It will be re-fetching the node and checking it over and over, until the condition is met or until the timeout is reached. You can either pass this timeout or configure it once via the [testProject.expect](./api/class-testproject.mdx#test-project-expect) value in test config.

By default, the timeout for assertions is not set, so it'll wait forever, until the whole test times out.

## expect(locator).toBeChecked
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to the checked input.

```js
const locator = page.locator('.subscribe');
await expect(locator).toBeChecked();
```

## expect(locator).toBeDisabled
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to a disabled element.

```js
const locator = page.locator('button.submit');
await expect(locator).toBeDisabled();
```

## expect(locator).toBeEditable
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an editable element.

```js
const locator = page.locator('input');
await expect(locator).toBeEditable();
```

## expect(locator).toBeEmpty
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an empty editable element or to a DOM node that has no text.

```js
const locator = page.locator('div.warning');
await expect(locator).toBeEmpty();
```

## expect(locator).toBeEnabled
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an enabled element.

```js
const locator = page.locator('button.submit');
await expect(locator).toBeEnabled();
```

## expect(locator).toBeFocused
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to a focused DOM node.

```js
const locator = page.locator('input');
await expect(locator).toBeFocused();
```

## expect(locator).toBeHidden
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to a hidden DOM node, which is the opposite of [visible](./actionability.mdx#visible).

```js
const locator = page.locator('.my-element');
await expect(locator).toBeHidden();
```

## expect(locator).toBeVisible
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to a [visible](./actionability.mdx#visible) DOM node.

```js
const locator = page.locator('.my-element');
await expect(locator).toBeVisible();
```

## expect(locator).toContainText(text, options?)
- `text`: <[string]> Text to look for inside the element
- `options`
  - `timeout`: <[number]> Time to wait for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).
  - `useInnerText`: <[boolean]> Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.

Ensures [Locator] points to a selected option.

```js
const locator = page.locator('.title');
await expect(locator).toContainText('substring');
```

## expect(locator).toHaveAttribute(name, value)
- `name`: <[string]> Attribute name
- `value`: <[string]|[RegExp]> Attribute value
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an element with given attribute.

```js
const locator = page.locator('input');
await expect(locator).toHaveAttribute('type', 'text');
```

## expect(locator).toHaveClass(expected)
- `expected`: <[string] | [RegExp] | [Array]<[string]>>
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an element with given CSS class.

```js
const locator = page.locator('#component');
await expect(locator).toHaveClass(/selected/);
```

Note that if array is passed as an expected value, entire lists can be asserted:

```js
const locator = page.locator('list > #component');
await expect(locator).toHaveClass(['component', 'component selected', 'component']);
```

## expect(locator).toHaveCount(count)
- `count`: <[number]>
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] resolves to an exact number of DOM nodes.

```js
const list = page.locator('list > #component');
await expect(list).toHaveCount(3);
```

## expect(locator).toHaveCSS(name, value)
- `name`: <[string]> CSS property name
- `value`: <[string]|[RegExp]> CSS property value
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] resolves to an element with the given computed CSS style

```js
const locator = page.locator('button');
await expect(locator).toHaveCSS('display', 'flex');
```

## expect(locator).toHaveId(id)
- `id`: <[string]> Element id
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an element with the given DOM Node ID.

```js
const locator = page.locator('input');
await expect(locator).toHaveId('lastname');
```

## expect(locator).toHaveJSProperty(name, value)
- `name`: <[string]> Property name
- `value`: <[any]> Property value
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an element with given JavaScript property. Note that this property can be of a primitive type as well as a plain serializable JavaScript object.

```js
const locator = page.locator('.component');
await expect(locator).toHaveJSProperty('loaded', true);
```

## expect(locator).toHaveText(expected, options)
- `expected`: <[string] | [RegExp] | [Array]<[string]>>
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).
  - `useInnerText`: <[boolean]> Whether to use `element.innerText` instead of `element.textContent` when retrieving DOM node text.

Ensures [Locator] points to an element with the given text. You can use regular expressions for the value as well.

```js
const locator = page.locator('.title');
await expect(locator).toHaveText(/Welcome, .*/);
```

Note that if array is passed as an expected value, entire lists can be asserted:

```js
const locator = page.locator('list > #component');
await expect(locator).toHaveText(['Text 1', 'Text 2', 'Text 3']);
```

## expect(page).toHaveTitle(title)
- `title`: <[string] | [RegExp]>>
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures page has a given title.

```js
await expect(page).toHaveTitle(/.*checkout/);
```

## expect(page).toHaveURL(url)
- `url`: <[string] | [RegExp]>>
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures page is navigated to a given URL.

```js
await expect(page).toHaveURL(/.*checkout/);
```

## expect(locator).toHaveValue(value)
- `value`: <[string] | [RegExp]>>
- `options`
  - `timeout`: <[number]> Time to retry assertion for, defaults to `timeout` in [testProject.expect](./api/class-testproject.mdx#test-project-expect).

Ensures [Locator] points to an element with the given input value. You can use regular expressions for the value as well.

```js
const locator = page.locator('input[type=number]');
await expect(locator).toHaveValue(/[0-9]/);
```


[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
